@@ -1,4 +1,7 @@
 21 June 2004 Sylvain Pion
+- Add Kernel_profiler.
+
+21 June 2004 Sylvain Pion
 - Improve static filters for 2D predicates.
 
 20 June 2004 Sylvain Pion
